--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,11 +11,12 @@ jobs:
       - name: Set env
         run: |
           echo "link=$(echo '${{ github.event.head_commit.message }}' | cut -d' ' -f 2)" >> $GITHUB_ENV
+          && ls
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN_KEY }}
           branch: gh-pages # The branch the action should deploy to.
-          folder: /links # The folder the action should deploy.
+          folder: ./links # The folder the action should deploy.
           target-folder:  /${{ env.link }}
